--- a/cosmo/src/app/home/home.component.html
+++ b/cosmo/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div>
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-9 padding-0">
             <img src="../../assets/images/home.jpeg" alt="Home Page" class="home-img">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 padding-0">
             <app-shopping-bag></app-shopping-bag>
         </div>
     </div>
