--- a/cosmo/src/app/home/home.component.css
+++ b/cosmo/src/app/home/home.component.css
@@ -1,5 +1,9 @@
 .home-img{
-    height: fit-content;
+    height: 670px;
     width: 100%;
     display: block;
+}
+
+.padding-0{
+    padding:0 0;
 }
