--- a/cosmo/src/app/checkout/checkout.component.html
+++ b/cosmo/src/app/checkout/checkout.component.html
@@ -1,1 +1,55 @@
-<p>checkout works!</p>
+<div>
+    <div class="row bar">
+        <div class="col-4"><img src="../../assets/images/cosmo.jpg" alt="Cosmo" class="cosmo"></div>
+        <div class="col-1 border-right"></div>
+        <div class="col-1 border-right left-align">1-Login <br> <label class="address">nidhi@gmail.com</label></div>
+        <div class="col-1 border-right left-align">2-Address<br><label class="address">House 2040 High Stree Banglore</label></div>
+        <div class="col-1 border-right left-align active-tab">3-Payment</div>
+        <div class="col-4"></div>
+    </div>
+    <div class="bg">
+        <div class="row payment-section">
+            <div class="col-3"></div>
+            <div class="col-6"><label class="payment-label">CHOOSE PAYMENT METHOD</label></div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2 payment-mode">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="active-payment">Credit/Debit Card</div>
+                        <div>UPI</div>
+                        <div>Google Pay</div>
+                        <div>Net Banking</div>
+                        <div>Mobile Wallets</div>
+                        <div>Cash on Delivery</div>
+                        <div>Gift Card</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2 credit-card">
+                <div class="card">
+                    <div class="card-body">
+                        <div><strong>Credit/Debit Card</strong></div>
+                        <div>1234 5678 1234 5678</div>
+                        <div><label class="expiry">Expiry</label><label class="expiry cvv">cvv<img class="cvv cvv-img" src="../../assets/images/cvv.png" alt="cvv"></label><br>01 /22 <label class="cvv">123</label></div>
+                        <input type=checkbox name="save"><label class="save-checkbox-label">Save this card for future</label>
+                        <div><button class="pay-btn">Pay Now ></button></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-2 summary">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text card-text-sustainable"><input type="checkbox" name="reward" id="reward-radio" checked> Sustainable Packaging
+                            <label><small>By choosinhg this option you will receive<strong> 100 Reward
+                                        Points</strong></small></label>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3"></div>
+        </div>
+    </div>
+</div>
