--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100vh;
+}
+
 .cosmo {
     float: right;
     width: 100px;
@@ -12,7 +16,7 @@
 .bg{
     background-color: lightgrey;
     width: 100%;
-    height: 700px;
+    height: 90vh;
 }
 
 .border-right{
@@ -41,6 +45,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 100px;
+    color: black;
 }
 
 .payment-section{
@@ -64,8 +69,13 @@
     padding: 0.25rem 0 0.25rem 0;
 }
 
-.active-payment {
+.active-payment, .active-address {
     border-right: 2px solid #ec2e7a;
+}
+
+.active-address {
+    color: #ec2e7a;
+    font-weight: 700;
 }
 
 .expiry{
@@ -73,7 +83,7 @@
 }
 
 .credit-card{
-    width: 20%;
+    width: 22%;
     /* padding: 0 0; */
 }
 
@@ -110,6 +120,7 @@
 
 .right-align{
     text-align: right;
+    float:right;
 }
 
 table,tr,td {
@@ -125,8 +136,135 @@ table,tr,td {
     font-weight: 600;
 }
 
-.card-body{
-    padding-top: 0;
+.summary-order {
+    color: orangered;
+    font-size: x-small;
+    padding-top: -1rem;
+    margin-top: -1.5rem;
+}
+
+.discount {
+    color: rgb(9, 224, 224);
+}
+
+.float-right {
+    float: right;
+}
+
+.arrow {
+    box-sizing: border-box;
+    height: 0.35rem;
+    width: 0.35rem;
+    border-style: solid;
+    border-color: orangered;
+    border-width: 0px 1px 1px 0px;
+    transform: rotate(45deg);
+    transition: border-width 150ms ease-in-out;
+    margin-top: 0.3rem;
+    margin-left: 0.3rem;
+  }
+
+  .arrow-up {
+    box-sizing: border-box;
+    height: 0.35rem;
+    width: 0.35rem;
+    border-style: solid;
+    border-color: orangered;
+    border-width: 0px 1px 1px 0px;
+    transform: rotate(225deg);
+    transition: border-width 150ms ease-in-out;
+    margin-top: 0.3rem;
+    margin-left: 0.3rem;
+  }
+
+  .summary-order > label {
+      color: #ec2e7a;
+      font-weight: 600;
+  }
+
+  .shipping-addr{
+    float: left;
+    font-weight: 700;
+    font-size: x-small;
+  }
+
+  .change-addr {
+    float: right;
+    color: #ec2e7a;
+    font-weight: 700;
+    font-size: x-small;
+  }
+
+  .addr {
+      font-size: xx-small;
+  }
+
+  .sum-address {
+      background-color: whitesmoke;
+  }
+
+  .grand-total {
+      font-weight: 700;
+  }
+
+  .grand-total > td {
+      width: 50%;
+  }
+
+  .address-option{
+      width: 23%;
+  }
+
+  .btn-edit {
+      font-size: xx-small;
+      width: 30px;
+      border: 1px solid lightgray;
+  }
+
+  .btn-ship{
+    font-size: xx-small;
+    border: 1px solid lightgray;
+    width: 87%;
+    color: white;
+    background-color: #ec2e7a;
+    height: 30px;
+    float: right;
+  }
+
+  .edit-address{
+      padding-top:0;
+      padding-bottom: 0.25rem;
+  }
+
+  .address-card {
+      margin-top: 0.5rem;
+  }
+
+  .bag-edit > div {
+      border-bottom: none;
+      padding-bottom: 0;
+  }
+
+  .p-img{
+    width: 285px;
+    height: 200px;
+    margin-top: 0.5rem;
+}
+
+.address-summary{
+    width: 24%;
+}
+
+.addr-total {
+    padding-top:0;
     padding-bottom: 0;
 }
 
+.margin-top{
+    margin-top:0.5rem;
+}
+
+.order-success {
+    width: 100%;
+    height: 100vh;
+}
