--- a/src/app/shopping-bag/shopping-bag.component.html
+++ b/src/app/shopping-bag/shopping-bag.component.html
@@ -48,7 +48,7 @@
                             <td><label class="right-align">&#8377;{{bagTotal}}</label></td>
                         </tr>
                         <tr *ngIf="reward" class="discount">
-                            <td><label >Discount(646 points used)</label></td>
+                            <td><label >Discount({{rewardPoints}} points used)</label></td>
                             <td><label class="right-align">-&#8377;{{rewardPoints/100}}</label></td>
                         </tr>
                         <tr>
