--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -2,7 +2,7 @@
     <div class="row bar" *ngIf="!orderSuccess">
         <div class="col-4"><img src="../../assets/images/cosmo.jpg" alt="Cosmo" class="cosmo"></div>
         <div class="col-1 border-right"></div>
-        <div class="col-1 border-right left-align">1-Login <br> <label class="address">jasmine.kaur@gmail.com</label>
+        <div class="col-1 border-right left-align">1-Login <br> <label class="address">pooja.ganar@gmail.com</label>
         </div>
         <div class="col-1 border-right left-align active-tab" [ngClass]="{'active-tab':!showPayment}">2-Address<br><label class="address">House 2040 High Stree
                 Banglore</label></div>
@@ -39,7 +39,7 @@
                 <div class="card address-card">
                     <div class="card-body edit-address">
                         <p class="card-text">
-                            <label class="addr"><strong>Jasmin Kaur</strong></label><br>
+                            <label class="addr"><strong>Pooja Ganar</strong></label><br>
                             <label class="addr">House 2040, High Street, Cape Town, Banglore, Karnataka -
                                 123456</label><br>
                             <label class="addr"><strong>+91-9876987698</strong></label>
@@ -198,7 +198,7 @@
                             <label class="shipping-addr">SHIPPING ADDRESS</label>
                             <label class="change-addr">Change</label>
                             <br>
-                            <label class="addr">Jasmin Kaur</label><br>
+                            <label class="addr">Pooja Ganar</label><br>
                             <label class="addr">House 2040, High Street, Cape Town, Banglore, Karnataka -
                                 123456</label><br>
                             <label class="addr"><strong>+91-9876987698</strong></label>
