--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -1,1 +1,10 @@
-<p>wallet works!</p>
+<div *ngIf="showWallet">
+    <button (click)="goToHistory()">
+        <img src="../../assets/images/wallet.jpeg" alt="Wallet" class="img">
+    </button>
+</div>
+<div *ngIf="!showWallet">
+    <button>
+        <img src="../../assets/images/history.jpeg" alt="Wallet" class="img">
+    </button>
+</div>
