--- a/src/app/wallet/wallet.component.html
+++ b/src/app/wallet/wallet.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="showWallet">
     <button (click)="goToHistory()">
-        <img src="../../assets/images/wallet.jpeg" alt="Wallet" class="img">
+        <img src="../../assets/images/wallet.jpg" alt="Wallet" class="img">
     </button>
 </div>
 <div *ngIf="!showWallet">
